apollo-router/src/plugins/telemetry/config_new/connector/snapshots/apollo_router__plugins__telemetry__config_new__connector__events__tests__connector_events_request@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/connector/events.rs
expression: yaml
---
- fields:
    kind: my.request.event
  level: INFO
  message: my request event message
  span:
    name: connect_request
    otel.kind: INTERNAL
  spans:
    - name: connect_request
      otel.kind: INTERNAL
